--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,23 @@
 spring:
   application:
     name: RabbitMQ
-
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/test
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   rabbitmq:
     host: localhost
     port: 5672
@@ -15,5 +31,6 @@ spring:
           max-attempts: 3
           max-interval: 10000
         default-requeue-rejected: false
+    publisher-confirm-type: correlated
 server:
   port: 8080
